--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
   "description": "Типотека",
   "main": "./src/service/service.js",
   "scripts": {
-	"test": "npm run eslint",
-	"eslint": "eslint --ext .js src/",
-	"start": "node ./src/service/service.js"
+    "test": "npm run eslint",
+    "eslint": "eslint --ext .js src/",
+    "start": "node ./src/service/service.js"
   },
   "repository": {
     "type": "git",
@@ -21,5 +21,8 @@
   "devDependencies": {
     "eslint": "6.8.0",
     "eslint-config-htmlacademy": "0.5.2"
+  },
+  "dependencies": {
+    "moment": "2.24.0"
   }
 }
