--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "./src/service/service.js",
   "scripts": {
     "test": "npm run eslint",
-    "eslint": "eslint --ext .js src/",
+    "eslint": "eslint --ext .js src/service",
     "start": "node ./src/service/service.js",
     "server": "nodemon ./src/service/service.js --server 3000",
     "start-front-server": "nodemon ./src/express/index.js"
