--- a/package.json
+++ b/package.json
@@ -4,11 +4,12 @@
   "description": "Типотека",
   "main": "./src/service/service.js",
   "scripts": {
-    "test": "npm run eslint",
+    "test": "npm run test::rest & npm run eslint",
     "eslint": "eslint --ext .js src/service",
     "start": "node ./src/service/service.js",
     "server": "nodemon ./src/service/service.js --server 3000",
-    "start-front-server": "nodemon ./src/express/index.js"
+    "start-front-server": "nodemon ./src/express/index.js",
+    "test::rest": "jest"
   },
   "repository": {
     "type": "git",
