--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "eslint": "eslint --ext .js src/service",
     "start": "node ./src/service/service.js",
     "server": "nodemon ./src/service/service.js --server 3000 | pino-pretty",
-    "server::debug": "LOG_LEVEL=debug nodemon ./src/service/service.js --server 3000 | pino-pretty",
+    "server::debug": "LOG_LEVEL=debug NODE_ENV=development nodemon ./src/service/service.js --server 3000 | pino-pretty",
     "start-front-server": "nodemon ./src/express/index.js",
     "test::rest": "jest"
   },
@@ -27,14 +27,17 @@
     "eslint-config-htmlacademy": "0.5.2",
     "jest": "^25.4.0",
     "nodemon": "2.0.2",
+    "pino-multi-stream": "5.0.0",
     "supertest": "4.0.2"
   },
   "dependencies": {
+    "axios": "0.19.2",
     "chalk": "3.0.0",
     "express": "4.17.1",
     "moment": "2.24.0",
     "nanoid": "3.1.3",
     "pino": "6.2.0",
+    "pino-http": "5.1.0",
     "pino-pretty": "4.0.0",
     "pug": "2.0.4"
   }
