--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "chalk": "3.0.0",
     "express": "4.17.1",
     "moment": "2.24.0",
+    "multer": "1.4.2",
     "nanoid": "3.1.3",
     "pino": "6.2.0",
     "pino-http": "5.1.0",
