--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "axios": "0.19.2",
     "chalk": "3.0.0",
     "express": "4.17.1",
+    "mime": "2.4.5",
     "moment": "2.24.0",
     "multer": "1.4.2",
     "nanoid": "3.1.3",
