--- a/.gitignore
+++ b/.gitignore
@@ -19,3 +19,8 @@ markup
 
 #ignore mocks.json file
 mocks.json
+
+src/express/public/img/articles/picture-*
+src/express/tmp/*
+src/express/logs/*.txt
+src/service/logs/*.txt
