--- a/package.json
+++ b/package.json
@@ -34,14 +34,17 @@
   "dependencies": {
     "axios": "0.19.2",
     "chalk": "3.0.0",
+    "dotenv": "8.2.0",
     "express": "4.17.1",
     "mime": "2.4.5",
     "moment": "2.24.0",
     "multer": "1.4.2",
     "nanoid": "3.1.3",
+    "pg": "8.2.1",
     "pino": "6.2.0",
     "pino-http": "5.1.0",
     "pino-pretty": "4.0.0",
-    "pug": "2.0.4"
+    "pug": "2.0.4",
+    "sequelize": "5.21.11"
   }
 }
